--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,12 @@ html {
 }
 
 body {
-	/*background-color: #e05993;*/
 	background-color: white;
-	background-image: url('../images/background.jpg');
+	background-image: url('/images/background.jpg');
+}
+
+h1 {
+	padding-bottom: 20px;
 }
 
 p {
@@ -30,13 +33,12 @@ small {
 	font-family: 'Open Sans Condensed', sans-serif;
 }
 
-.container {
-}
+
 
 
 /*Class Colors*/
 
-.deathknight-color {
+.death-knight-color {
 	color: #EA9796;
 }
 
@@ -87,53 +89,93 @@ small {
 /* Header Section */
 
 #header {
-	margin-top: 50px;
 	background-color: #f6a6c1;
-	background-image: url("http://www.transparenttextures.com/patterns/asfalt-light.png");
-	/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+	background-image: url("/images/headerbackground.png");
 	border: 4px solid #fbcfe2;
 	border-radius: 10px;
+}
+
+@media (min-width: 992px) {
+	#header {
+		margin: 50px 0 0 0;
+	}
 }
 
 #guild-text-container {
 	padding: 10px;
 	color: #ffffff;
+	height: 140px;
 }
 
-#guild-text-container img {
-	max-height: 120px;
+#guild-logo-container {
+	padding: 10px 10px 0 10px;
+}
+
+@media (min-width: 992px) {
+	#guild-logo-container {
+		padding: 25px 10px 0 10px;
+	}
+}
+
+@media (min-width: 1200px) {
+	#guild-logo-container {
+		padding: 15px 10px 0 10px;
+	}
+}
+
+#guild-logo-container img {
+	max-width: 100%;
+	max-height: 150px;
+	display: block;
+	margin: auto;
 }
 
 #guild-name {
-	position: absolute;
-	display: inline;
 	height: 85px;
 	font-size: 350%;
 	font-family: 'DJB Jacked Up Kinda Luv', cursive;
 	white-space: nowrap;
+	text-align: center;
 }
 
 #guild-progress {
-	position: absolute;
-	font-size: 160%;
-	bottom: 20px;
-	padding-left: 20px;
+	font-size: 1.6em;
 	display: none;
 	font-family: 'Open Sans Condensed', sans-serif;
+	text-align: center;
+}
+
+@media (min-width: 992px) {
+	#guild-name {
+		text-align: left;
+	}
+
+	#guild-progress {
+		text-align: left;
+		padding: 0 0 0 15px;
+	}
 }
 
 #nav-container {
 	padding: 0;
 	text-align: center;
+	overflow-x:auto;
 }
 
 .nav {
-	height: 95px;
 	vertical-align: bottom;
-	font-size: 200%;
-	display: inline-block;
-	margin-top: 40px;
+	font-size: 1.45em;
+	display:inline-flex;
 	font-family: 'Open Sans Condensed', sans-serif;
+	padding: 0 0 10px 0;
+}
+
+@media (min-width: 992px) {
+	.nav {
+		height: 95px;
+		margin-top: 40px;
+		font-size: 2em;
+	}
 }
 
 .nav a {
@@ -156,19 +198,19 @@ small {
 
 /*Content Section */
 
-#content {
-	margin: 30px 0;
+@media (min-width: 768px) {
+	#content {
+		margin: 20px 0;
+	}
 }
 
-
-/* Home Page */
-
-#about-us-container {
-	padding: 0;
-	padding-right: 20px;
+@media (min-width: 992px) {
+	#content {
+		margin: 30px 20px;
+	}
 }
 
-#about-us-text {
+.text-box {
 	border: 4px solid #f6a6c1;
 	border-radius: 10px;
 	background-color: #ffffff;
@@ -176,9 +218,39 @@ small {
 	font-family: 'Open Sans Condensed', sans-serif;
 }
 
-#about-us-image {
+.table-box {
+	border: 4px solid #f6a6c1;
+	border-radius: 10px;
+	background-color: #ffffff;
+    padding: 20px 10px;
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.table-responsive {
+	margin: 0;
+}
+
+/* Home Page */
+
+#about-us-container {
+	padding: 0 0 0 0;
+}
+
+@media (min-width: 768px) {
+	#about-us-container {
+	padding: 0 0 20px 0;
+	}
+}
+
+@media (min-width: 992px) {
+	#about-us-container {
+	padding: 0 20px 0 0;
+	}
+}
+
+#about-us-image-container {
 	padding: 0;
-	background-image: url('../images/christmas.jpg');
+	background-image: url('/images/christmas.jpg');
 	background-size: cover;
 	background-position: center bottom;
 	border: 4px solid #f6a6c1;
@@ -195,17 +267,13 @@ small {
 /* Raid Team Page */
 
 #raider-container {
-	max-width: 900px;
+	max-width: 1100px;
 	margin: 0 auto;
 	padding: 20px;
 	border: 4px solid #f6a6c1;
 	border-radius: 10px;
 	background-color: #ffffff;
 	font-family: 'Open Sans Condensed', sans-serif;
-}
-
-#raider-container h1 {
-	padding-bottom: 30px;
 }
 
 .guild-member-portrait {
@@ -222,10 +290,9 @@ small {
 .guild-member-name {
 	position: absolute;
 	background-color: rgba(0,0,0,.5);
-	/*background-color: rgba(206,160,185,.7);*/
 	background-clip: content-box;
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 1.3em;
+	font-size: 1.7em;
 	margin: 20px;
 	bottom: 15px;
 	left: 0;
@@ -250,16 +317,35 @@ small {
 }
 
 #fullscreen-sub-container {
-	position: relative;
-	width: 90%;
 	margin: auto;
-  	top: 50%;
-  	transform: translateY(-50%);
+	width: 90%;
+	top: 50%;
 }
 
 #fullscreen-image-container {
-	padding: 0;
-	padding-left: 20px;
+	padding: 20px 0 0 0;
+	display: none;
+}
+
+@media (min-width: 768px) {
+
+	#fullscreen-image-container {
+		display: initial;
+	}
+}
+
+
+@media (min-width: 992px) {
+	#fullscreen-sub-container {
+		position: relative;
+		width: 90%;
+		top: 50%;
+  		transform: translateY(-50%);
+	}
+
+	#fullscreen-image-container {
+		padding: 0 0 0 20px;
+	}
 }
 
 #fullscreen-image-container img {
@@ -303,3 +389,50 @@ small {
 	color: #e05993;
 }
 
+
+/* Join Page */
+
+.openings-container {
+	padding: 0;
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+#mythic-openings-container {
+	padding: 0;
+}
+
+#heroic-openings-container {
+	padding: 0;
+}
+
+#join-us-container {
+	padding: 0 0 0 0;
+}
+
+@media (min-width: 768px) {
+	#mythic-openings-container {
+		padding: 0 10px 0 0;
+	}
+
+	#heroic-openings-container {
+		padding: 0 0 0 10px;
+	}
+	#join-us-container {
+		padding: 0 0 20px 0;
+	}
+}
+
+@media (min-width: 992px) {
+	#join-us-container {
+		padding: 0 20px;
+	}
+
+	#mythic-openings-container {
+		padding: 0;
+	}
+
+	#heroic-openings-container {
+		padding: 0;
+	}
+}
