--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-	padding-bottom: 20px;
+	padding: 0 0 20px 0;
 }
 
 p {
@@ -173,7 +173,7 @@ small {
 @media (min-width: 992px) {
 	.nav {
 		height: 95px;
-		margin-top: 40px;
+		margin: 40px 0 0 0;
 		font-size: 2em;
 	}
 }
@@ -250,7 +250,7 @@ small {
 
 #about-us-image-container {
 	padding: 0;
-	background-image: url('/images/christmas.jpg');
+	background-image: url('/images/aboutus.jpg');
 	background-size: cover;
 	background-position: center bottom;
 	border: 4px solid #f6a6c1;
@@ -374,13 +374,11 @@ small {
 #fullscreen-text-description {
 	font-size: 1.5em;
 	font-family: 'Open Sans Condensed', sans-serif;
-	padding-top: 10px;
-	padding-left: 30px;
-	padding-right: 30px;
+    padding: 10px 30px 0 30px;
 }
 
 #armory-button {
-	padding-bottom: 20px;
+	padding: 0 0 20px 0;
 }
 
 #armory-button a {
