Added Contact page

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-	padding: 0 0 20px 0;
+	margin-bottom: 20px;
 }
 
 p {
@@ -42,47 +42,89 @@ small {
 	color: #EA9796;
 }
 
+.death-knight-bg-color {
+	background-color: #EA9796;
+}
+
 .druid-color {
 	color: #ECA775;
+}
+
+.druid-bg-color {
+	background-color: #ECA775;
 }
 
 .hunter-color {
 	color: #A8D063;
 }
 
+.hunter-bg-color {
+	background-color: #A8D063;
+}
+
 .mage-color {
 	color: #A6CFE9;
+}
+
+.mage-bg-color {
+	background-color: #A6CFE9;
 }
 
 .monk-color {
 	color: #73E0AF;
 }
 
+.monk-bg-color {
+	background-color: #73E0AF;
+}
+
 .paladin-color {
 	color: #ECA8C3;
+}
+
+.paladin-bg-color {
+	background-color: #ECA8C3;
 }
 
 .priest-color {
 	color: #BCBBBB;
 }
 
+.priest-bg-color {
+	background-color: #BCBBBB;
+}
+
 .rogue-color {
 	color: #FFD600;
+}
+
+.rogue-bg-color {
+	background-color: #FFD600;
 }
 
 .shaman-color {
 	color: #6797DE;
 }
 
+.shaman-bg-color {
+	background-color: #6797DE;
+}
+
 .warlock-color {
 	color: #DAACF7;
+}
+
+.warlock-bg-color {
+	background-color: #DAACF7;
 }
 
 .warrior-color {
 	color: #CEBB9E;
 }
 
-
+.warrior-bg-color {
+	background-color: #CEBB9E;
+}
 
 
 
@@ -124,9 +166,6 @@ small {
 }
 
 #guild-logo-container img {
-	max-width: 100%;
-	max-height: 150px;
-	display: block;
 	margin: auto;
 }
 
@@ -167,7 +206,7 @@ small {
 	font-size: 1.45em;
 	display:inline-flex;
 	font-family: 'Open Sans Condensed', sans-serif;
-	padding: 0 0 10px 0;
+	margin: 0 0 10px 0;
 }
 
 @media (min-width: 992px) {
@@ -233,7 +272,7 @@ small {
 /* Home Page */
 
 #about-us-container {
-	padding: 0 0 0 0;
+	padding: 0;
 }
 
 @media (min-width: 768px) {
@@ -253,12 +292,6 @@ small {
 	background-image: url('/images/aboutus.jpg');
 	background-size: cover;
 	background-position: center bottom;
-	border: 4px solid #f6a6c1;
-	border-radius: 10px;
-}
-
-#about-us-image img {
-	max-width: 100%;
 	border: 4px solid #f6a6c1;
 	border-radius: 10px;
 }
@@ -298,7 +331,7 @@ small {
 	left: 0;
 	right: 0;
 	text-align: center;
-	pointer-events:none;
+	pointer-events: none;
 }
 
 .guild-member-name:hover {
@@ -378,7 +411,7 @@ small {
 }
 
 #armory-button {
-	padding: 0 0 20px 0;
+	margin: 0 0 20px 0;
 }
 
 #armory-button a {
@@ -394,14 +427,6 @@ small {
 	padding: 0;
 	font-size: 1.5em;
 	font-weight: bold;
-}
-
-#mythic-openings-container {
-	padding: 0;
-}
-
-#heroic-openings-container {
-	padding: 0;
 }
 
 #join-us-container {
@@ -422,15 +447,126 @@ small {
 }
 
 @media (min-width: 992px) {
+	.openings-container {
+	padding: 0;
+	}
+
 	#join-us-container {
 		padding: 0 20px;
 	}
+}
 
-	#mythic-openings-container {
-		padding: 0;
+
+/* Contact Page */
+
+#contact-us-container {
+	padding: 0;
+}
+
+#contact-us-thumbnail-container {
+	margin: 0 auto;
+	padding: 20px;
+	border: 4px solid #f6a6c1;
+	border-radius: 10px;
+	background-color: #ffffff;
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.contact-info-portrait {
+	position: relative;
+	width: 217px;
+	margin: 10px auto;
+}
+
+@media (min-width: 768px) {
+	.contact-info-portrait {
+		width: 221px;
 	}
+	#contact-us-thumbnail-container {
+		padding: 20px 100px;
+	}
+}
 
-	#heroic-openings-container {
-		padding: 0;
+@media (min-width: 992px) {
+	.contact-info-portrait {
+		width: 178px;
+	}
+	#contact-us-thumbnail-container {
+		padding: 20px 80px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.contact-info-portrait {
+		width: 188px;
+	}
+	#contact-us-thumbnail-container {
+		padding: 20px;
+	}
+}
+
+.contact-info-container {
+	display: none;
+	position: absolute;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 2em;
+	top: 4px;
+	bottom: 4px;
+	left: 4px;
+	right: 4px;
+	text-align: center;
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.contact-info-sub-container {
+    padding: 10px 0 0 0;
+}
+
+.contact-name {
+	font-size: 1.1em;
+}
+
+.contact-rank {
+	font-size: 1em;
+}
+
+.contact-realid {
+	font-size: 1.1em;
+}
+
+@media (min-width: 768px) {
+	.contact-name {
+	font-size: 1.1em;
+	}
+	.contact-rank {
+	font-size: 1em;
+	}
+	.contact-realid {
+	font-size: 1.1em;
+	}
+}
+
+@media (min-width: 992px) {
+	.contact-name {
+	font-size: 1.1em;
+	}
+	.contact-rank {
+	font-size: 1em;
+	}
+	.contact-realid {
+	font-size: 1.1em;
+	}
+}
+
+@media (min-width: 1200px) {
+	.contact-name {
+	font-size: 1.1em;
+	}
+	.contact-rank {
+	font-size: 1em;
+	}
+	.contact-realid {
+	font-size: 1.1em;
 	}
 }
