--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,31 @@
 
 html {
     overflow-y: scroll;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 body {
 	background-color: white;
 	background-image: url('/images/background.jpg');
+	margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+footer {
+	background-color: #f6a6c1;
+	position: absolute;
+	height: 36px;
+    width: 100%;
+    bottom: 0;
+    text-align: right;
+    padding: 8px 8px 0 0;
+}
+
+footer a {
+	color: #f6a6c1;
 }
 
 h1 {
@@ -233,9 +253,19 @@ small {
 
 
 
-
-
 /*Content Section */
+
+.wrapper {
+	position: relative;
+    margin: 0 auto;
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+}
+
+.container {
+	padding-bottom: 32px;
+}
 
 @media (min-width: 768px) {
 	#content {
